[Ref] Refactor uses of deprecated API.
RDF4J, internal JOPA, Java Reflection. Remove deprecated ResultSet.registerObserver method, remove deprecated (and unused) Jena SDB storage type.