@@ -2,6 +2,8 @@ package cz.cvut.kbss.jopa.utils;
 
 import cz.cvut.kbss.jopa.exception.InstantiationException;
 
+import java.lang.reflect.InvocationTargetException;
+
 /**
  * Utility functions using Java Reflection API.
  */
@@ -21,12 +23,12 @@ public class ReflectionUtils {
      * @return New instance of class {@code cls}
      * @throws InstantiationException When no-arg constructor does not exist or is not accessible
      */
-    public static  <T> T instantiateUsingDefaultConstructor(Class<T> cls) {
+    public static <T> T instantiateUsingDefaultConstructor(Class<T> cls) {
         // The main purpose of this method is to wrap object instantiation so that the deprecated Class.newInstance
         // calls can be replaced after migrating to newer Java version
         try {
-            return cls.newInstance();
-        } catch (java.lang.InstantiationException | IllegalAccessException e) {
+            return cls.getDeclaredConstructor().newInstance();
+        } catch (java.lang.InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             throw new InstantiationException(e);
         }
     }
